force-app/main/default/objects/Exchange_Order__c/Exchange_Order__c.object-meta.xml
<CustomObject>
    <label>Exchange Order</label>
    <nameField>
        <label>Exchange Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exchange Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>