force-app/main/default/objects/Exchange_Order__c/fields/Security__c.field-meta.xml
<CustomField>
    <fullName>Security__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Security</label>
    <referenceTo>Security__c</referenceTo>
    <relationshipLabel>Exchange Orders</relationshipLabel>
    <relationshipName>Exchange_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>