force-app/main/default/objects/Exchange_Order__c/fields/Time_in_Force__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Force__c</fullName>
    <label>Time in Force</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>GTC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>